--- a/package.json
+++ b/package.json
@@ -22,14 +22,18 @@
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/background-geolocation": "^4.17.0",
     "@ionic-native/core": "~4.12.0",
+    "@ionic-native/flashlight": "^4.20.0",
     "@ionic-native/geolocation": "^4.15.0",
     "@ionic-native/splash-screen": "~4.12.0",
     "@ionic-native/status-bar": "~4.12.0",
     "@ionic/storage": "2.1.3",
     "android": "0.0.8",
     "angularfire2": "^5.1.0",
+    "chart.js": "^2.8.0",
     "cordova-android": "7.1.2",
+    "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-flashlight": "^3.2.0",
     "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.2.0",
@@ -40,7 +44,10 @@
     "firebase": "^5.5.7",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
-    "leaflet": "^1.3.4",
+    "leaflet": "^1.5.1",
+    "phonegap-plugin-barcodescanner": "^8.0.1",
+    "pubnub": "^4.23.0",
+    "pubnub-angular2": "^1.3.2",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
@@ -70,6 +77,10 @@
         "ACCOUNT_LABEL": "@string/app_name",
         "ACCOUNT_TYPE": "$PACKAGE_NAME.account",
         "CONTENT_AUTHORITY": "$PACKAGE_NAME"
+      },
+      "cordova-plugin-flashlight": {},
+      "phonegap-plugin-barcodescanner": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
       }
     },
     "platforms": [
